added details page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap');
 
 .App {
   text-align: center;
@@ -39,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
